# districtr-v2

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BE_EXPERT.md  CLAUDE.md  CMS_MODERATION_EXPERT.md  DB_QUERY_AND_MIGRATIONS_EXPERT.md  DOCKER_EXPERT.md  Dockerfile  FE_EXPERT.md  GERRYDB_MAP_LIFECYCLE_EXPERT.md  MAP_RUNTIME_EXPERT.md  Makefile  PIPELINES_EXPERT.md  README.md  STATE_SYNC_EXPERT.md  WORKERS_EXPERT.md  column_names_v2.yaml  docker-compose.yml  docker-compose_mac.yml  manifest  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
pipelines/: .env.example  Dockerfile  README.md  README_SETUP.md  __init__.py  __main__.py  cli.py  pyproject.toml  requirements.txt
pipelines/build_client_rects/: cli.py  requirements.txt  utils.py
pipelines/cleaning/: __init__.py  cli.py  models.py
pipelines/cleaning/tests/: test_cli.py
pipelines/cli/: __main__.py  main.py
pipelines/configs/: tabular_vap_and_eleection.yml  tilesets_vap_and_election.yml
pipelines/core/: __init__.py  cli.py  constants.py  io.py  models.py  settings.py  utils.py
pipelines/simple_elt/: README.md  ca-2022-srprec.sh  files.py  main.py  requirements.txt
pipelines/tabular/: __main__.py  cli.py  models.py  scratch.py
pipelines/tabular/configs/: ny_21_tabular_config.yml  v1_tabular_config.yml  (+1 more)
pipelines/tabular_parquets/: scratch.py
pipelines/tests/: conftest.py
pipelines/tilesets/: __main__.py  cli.py  constants.py  files.py  models.py  requirements.txt  settings.py  utils.py
pipelines/transforms/: __init__.py  cli.py  graph.py  models.py
(+1401 files in other folders)
